# sfb

./: .gitignore  Cargo.toml  imgui.ini  todo.md
resources/ship_specs/federation/: ca.toml
resources/ship_specs/klingon/: d7.toml
src/: hex.rs  main.rs  screen.rs  ship.rs  ship_spec.rs
src/screen/: energy_allocation_window.rs  imgui_wrapper.rs  main_menu.rs  map.rs
