[package]
name = "sfb"
version = "0.1.0"
authors = ["Ian Olsen <ian.olsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
serde = { version = "1.0.110", features = ["derive"] }
toml = "0.5.6"
