[package]
name = "sfb"
version = "0.1.0"
authors = ["Ian Olsen <ian.olsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
ggez = "0.5.1"
imgui = "0.3.0"
imgui-gfx-renderer = "0.3.0"
imgui-sys = "0.3.0"
serde = { version = "1.0.110", features = ["derive"] }
toml = "0.5.6"
